[Fix] Fix reCaptcha

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -429,10 +429,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12 text-center">
-                                                    <button type="submit" class="button button-a button-big button-rouded g-recaptcha"
-                                                            data-sitekey="6LfGikIeAAAAAE_TdGd1YCSIorHilg6Rm_MKLqxS"
-                                                            data-callback='onSubmit'
-                                                            data-action='submit'>
+                                                    <button type="submit" class="button button-a button-big button-rouded">
                                                             Envoyer le Message
                                                     </button>
                                                 </div>
